--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="row">
                 <div class="col-xl-4"><div class="first_item">
                     <img src="sources/uber.png" alt="photo">
-                    <div class="first_item_text">Lorem ipsum dolor sit amet.</div>
+                    <div class="first_item_text">Lorem ipsum dolor sit amet.</div> 
                 </div></div>
                 <div class="col-xl-4"><div class="first_item">
                     <img src="" alt="">
@@ -81,5 +81,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <div class="ahahhaha"></div>
 </body>
 </html>
